--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     server {
         listen 80;
-        server_name yourcustomdomain.com;
+        server_name sc2classroom.onrender.com;
 
         # 配置访问码验证页面
         location /login.html {
@@ -19,7 +19,7 @@ http {
         location /validate {
             content_by_lua_block {
                 local args = ngx.req.get_uri_args()
-                if args.code ~= "YOUR_28_DIGIT_CODE" then  # 替换为您的自定义28位访问码
+                if args.code ~= "3101052011091328342083746457" then  # 替换为您的自定义28位访问码
                     ngx.status = 403
                     ngx.say("Access Denied")
                     return
@@ -31,7 +31,7 @@ http {
         # 配置反向代理
         location / {
             # 指向目标站点的代理设置
-            proxy_pass https://target.website.com;
+            proxy_pass https://reduced-josepha-protoss-animate-hub-ea847f07.koyeb.app;
             proxy_set_header Host target.website.com;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
