--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     server {
         listen 80;
-        server_name sc2classroom.onrender.com;
+        server_name sc2classrooms.onrender.com;
 
         # 配置访问码验证页面
         location /login.html {
