--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
         location / {
             # 指向目标站点的代理设置
             proxy_pass https://reduced-josepha-protoss-animate-hub-ea847f07.koyeb.app;
-            proxy_set_header Host target.website.com;
+            proxy_set_header Host https://reduced-josepha-protoss-animate-hub-ea847f07.koyeb.app;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
